Fix body background color on mobile

--- a/css/style.scss
+++ b/css/style.scss
@@ -15,7 +15,7 @@
 body {
 	font-family: 'Roboto Slab', serif;
 	color: #444444;
-	background-color: #f4f4f1;
+	background-color: #ffffff;
 
 	&.body-overlay-active,
 	&.lightbox-active {
